cmake_minimum_required(VERSION 3.10.3)

# Define the project
project(rspflapw VERSION 0.0.0 LANGUAGES Fortran)

set(rspflapw_DEPENDENCIES mpi hdf5 )
set(rspflapw_INCLUDES atom_mod.mod
                      compare_vec_mod.mod
                      etot_mod.mod
                      files_mod.mod
                      hdf5io_mod.mod
                      inp_mod.mod
                      input_mod.mod
                      lda_dmft_mod.mod
                      manager_mod.mod
                      optimize_mod.mod
                      parallel_mod.mod
                      sitegen_mod.mod
                      solid_mod.mod
                      units_mod.mod
                      )

set(rspflapw_SRCS atom_mod.F
                  compare_vec_mod.F
                  etot_mod.F
                  files_mod.F
                  hdf5io_mod.F
                  inp_mod.F
                  input_mod.F
                  lda_dmft_mod.F
                  manager_mod.F
                  optimize_mod.F
                  parallel_mod.F
                  sitegen_mod.F
                  solid_mod.F
                  units_mod.F
                  a_cont_coeff.F
                  a_cont_ferm.F
                  a_cont_weights.F
                  add_cor.F
                  add_to_output_w.F
                  add_vxc.F
                  afteread.F
                  angle.F
                  asympt_sums_nu.F
                  asympt_sums_omega.F
                  atom.F
                  atscfp.F
                  aux_sums.F
                  bandener.F
                  bands.F
                  bands_gnuplot.F
                  bands_near_ef.F
                  bands_qp.F
                  bands_sig_0.F
                  beging.F
                  bessc.F
                  bld_sh_trans.F
                  b_me.F
                  bose_red.F
                  boson_cheb_coeff_nu.F
                  boson_interp_nu.F
                  boson_interp_nu_v_c1.F
                  boson_interp_nu_v_c.F
                  boson_interp_nu_v.F
                  boson_neg_tau.F
                  boson_pack_tau.F
                  boson_unpack_tau.F
                  boson_unpack_tau_par.F
                  bos_sums.F
                  bravay.F
                  ccutup.F
                  cft.F
                  check_band_states.F
                  check_b.F
                  check_hermit.F
                  check_pv_sym.F
                  check_w_sym.F
                  classes_k.F
                  clebsch.F
                  cnsbet.F
                  conjgrad.F
                  conv_hh.F
                  core_all.F
                  core_atom_0.F
                  core_atom.F
                  cor_new.F
                  coulener.F
                  coul_int.F
                  cshear.F
                  d_cheb_dx.F
                  dcheb_recurr.F
                  debugger.F
                  dft_loop.F
                  dif.F
                  divide_bz.F
                  dlmtor.F
                  dm.F
                  dm_j.F
                  dos.F
                  dqdall.F
                  dro1sub.F
                  dsinx_dx.F
                  dsyevx_1.F
                  dsytrd_1.F
                  e1_q0_fit.F
                  efins.F
                  eiglin.F
                  eig_val_gener_solver.F
                  eig_val_gener_solver_r.F
                  eig_val_solver.F
                  eig_val_solver_r.F
                  equal.F
                  equiv_atom.F
                  erfxx.F
                  error_alloc.F
                  error_dealloc.F
                  etot_c_from_pw.F
                  etot_gw_0.F
                  etot_gw_1.F
                  etot_gw_2.F
                  etot_x_from_pw.F
                  exchcorr.F
                  exchener.F
                  e_x_cor.F
                  excvxc2d.F
                  f100.F
                  f102.F
                  fac2.F
                  ferm_cheb_coeff_omega.F
                  fermi_dirac.F
                  ferm_interp_omega.F
                  fermi_omega.F
                  ferm_pack_omega.F
                  ferm_pack_tau.F
                  ferm_rs_from_ks.F
                  ferm_rs_from_ks_ii.F
                  ferm_rs_from_ks_mi.F
                  ferm_sums.F
                  ferm_unpack_omega.F
                  ferm_unpack_tau.F
                  f_ex_new.F
                  fft3.F
                  fgtlind.F
                  fi0_full.F
                  fint.F
                  fit_zero.F
                  flapw_1.F
                  flapw_driver.F
                  f_om_nu_maz.F
                  for_nu_interpolation.F
                  for_omega_interpolation.F
                  fourier.F
                  fractional2cartesian.F
                  freeatom.F
                  free_energy_c.F
                  free_energy_x.F
                  from_nu_to_tau.F
                  from_omega_to_tau.F
                  from_tau_r_to_tau_herm.F
                  from_tau_to_nu.F
                  from_tau_to_omega.F
                  g0_sig_g_omega.F
                  gbs_number.F
                  g_c_delta_omega.F
                  g_c_omega_atom.F
                  g_c_omega.F
                  g_c_pack_omega.F
                  get_bz.F
                  get_cfgt.F
                  get_fi0_gw.F
                  getind.F
                  get_indgb.F
                  get_indk1.F
                  get_indk.F
                  get_indk_sum.F
                  get_k.F
                  getlimj.F
                  getmaxb.F
                  getmts.F
                  get_nre.F
                  get_pc.F
                  getplw.F
                  get_pv.F
                  getrbs.F
                  get_r.F
                  get_rr.F
                  getsuml.F
                  get_tau.F
                  get_t.F
                  get_tmm.F
                  gety.F
                  g_inside_cutoff.F
                  g_k_g_r1.F
                  g_loc_degen.F
                  g_mt_from_g_full.F
                  goto_end.F
                  g_pair_print_prepare.F
                  g_qp_omega.F
                  g_qp_tau.F
                  green0_boson_nu.F
                  green0_boson_tau.F
                  green_0.F
                  green0.F
                  green_34_omega.F
                  green_34_tau.F
                  group.F
                  group_table.F
                  g_rr_r_r1_star.F
                  g_rs_from_ks_mi.F
                  g_rs_from_ks_mm.F
                  gtbvec.F
                  gw_loop.F
                  gx_k_g_r1.F
                  g_x_omega.F
                  gx_rs_from_ks_mi.F
                  gx_rs_from_ks_mm.F
                  g_x_tau.F
                  hankel.F
                  heg_e1_small_q.F
                  h_magn_external_mt.F
                  ind_block.F
                  indgb_e.F
                  inf_qnt.F
                  inhomo.F
                  init.F
                  init_vh.F
                  inp_gga.F
                  inp_lda.F
                  int1_xn_exp_ax.F
                  intalt.F
                  integral_band_pw_band.F
                  integral_band_pw_band_mt1.F
                  integral_band_pw_band_mt.F
                  integral_band_pw_band_vrt.F
                  integral_matrix_simpson.F
                  integral_m_j.F
                  integral_pbint_pw.F
                  integral_pbmt_pw_0.F
                  integral_pbmt_pw.F
                  integral_pw_i.F
                  integral_pw_j.F
                  integral_pw_k.F
                  integr_tau2.F
                  interp_array_opt.F
                  interp_bos_even_tau.F
                  interp_bos_even_tau_prepare.F
                  interp_ferm_tau.F
                  interp_ferm_tau_prepare.F
                  interp_g_omega_c.F
                  interp_g_omega.F
                  interp_g_omega_sq.F
                  interp_g_tau_bnd.F
                  interp_inside.F
                  interp_w_nu_rsq.F
                  interp_w_nu_shell.F
                  interp_w_nu_sq.F
                  interp_w_nu_v.F
                  int_me.F
                  int_tau_sigc_gc.F
                  int_tau_sigc_gx.F
                  invers_z.F
                  k_for_band_plot.F
                  k_sym_intact.F
                  lda_dmft_charge_density.F
                  lda_k_point.F
                  legendre.F
                  legpol.F
                  lgen.F
                  lget.F
                  lindhardt_stat.F
                  local_orb.F
                  mag_mom.F
                  matchav.F
                  matching.F
                  mathpaw.F
                  matrix_norms.F
                  matr_k_reducible.F
                  memory1_solid.F
                  memory_atom.F
                  memory_close.F
                  memory_flapw.F
                  memory_solid.F
                  me_orb_real.F
                  mesh_nu_d.F
                  mesh_nu.F
                  mesh_omega_d.F
                  mesh_omega.F
                  mesh_tau_cheb.F
                  mixer_gw.F
                  mixro1.F
                  mix_up_down.F
                  mkl_dfti.F
                  mklegw.F
                  mq_prepare.F
                  mt_me.F
                  mxmymz.F
                  nasos.F
                  neighbor_atm.F
                  neighbors_atoms.F
                  neighbors_k_all.F
                  norma_wf.F
                  nu_fitting_2.F
                  nu_fitting.F
                  num_bz0_ijk.F
                  occ_number.F
                  orb_rel.F
                  orb_tot.F
                  ordering_all.F
                  ordering.F
                  output_boson_q_nu.F
                  output_dos.F
                  output_eigen_states.F
                  output_gc_band_omega.F
                  output_gc_band_tau.F
                  output_gx_band_tau.F
                  output_pol_tau_q.F
                  output_ro_v.F
                  output_sigc_band_tau.F
                  output_sigma_ac.F
                  output_sigma_band.F
                  output_static_band.F
                  output_sym_k_orb_char.F
                  output_vh_sigx_band.F
                  output_w.F
                  output_z_factor.F
                  overlap_lapw.F
                  overl_bnd_spin.F
                  pack_hermit.F
                  pade_fermion_chain.F
                  pade_fermion_chain_out.F
                  parsbl.F
                  pb_original_integral.F
                  p_ii_solid.F
                  p_im_q_from_r.F
                  p_im_r.F
                  pja.F
                  plegn.F
                  plot_bands_lapw.F
                  plwovi.F
                  plwrho.F
                  p_mm_q_from_r.F
                  p_mm_r.F
                  pnp.F
                  poiss1.F
                  pol_0_spin_spin.F
                  prd1.F
                  prd2.F
                  prd.F
                  printi.F
                  print_matrix.F
                  prnatom.F
                  prod_b1.F
                  prod_b2.F
                  prod_bas.F
                  properties.F
                  p_r_tau_solid.F
                  psi_function_to_real_mesh.F
                  psi_psi_m.F
                  pw_from_pb.F
                  qft.F
                  qp_green.F
                  rad_dif.F
                  rad_eq0.F
                  rad_eq1.F
                  rad_eq2.F
                  rad_eq3.F
                  rad_eq.F
                  rad_eqs.F
                  rad_hf_check.F
                  rad_inscribed_sphere.F
                  radli.F
                  radmsh.F
                  radsch_b.F
                  radsch.F
                  ranw.F
                  rbs_number.F
                  readini.F
                  read_kpath.F
                  read_restart_files.F
                  read_ro.F
                  reduc.F
                  renr_val.F
                  r_mesh_checking.F
                  rofull_atom.F
                  rofull.F
                  ro_int_g.F
                  rostart.F
                  rotate11.F
                  rotate.F
                  rotate_opt.F
                  rot_mag.F
                  ro_val.F
                  ro_v_cartesian_0.F
                  r_pair_a_sym.F
                  rr_degeneracy.F
                  rr_inside_sphere_0.F
                  rr_mesh_coarse.F
                  sbzmesh.F
                  scf_0.F
                  scg.F
                  scgr.F
                  sckg2.F
                  screened_w.F
                  search_mu_0.F
                  search_mu.F
                  self_energy_1.F
                  self_energy_dft_basis.F
                  self_energy.F
                  set_adm.F
                  set_control.F
                  setdiag.F
                  seteny.F
                  setfgtl.F
                  set_g00.F
                  set_g.F
                  set_g_tau_0.F
                  set_h0.F
                  setk2.F
                  set_pairs.F
                  setpw_gw1.F
                  setpw_gw.F
                  setrel.F
                  setsites.F
                  set_stars.F
                  setwmt.F
                  sgaunt.F
                  sgroup.F
                  sigc_ii_solid.F
                  sigc_im_k_from_r.F
                  sigc_im_r.F
                  sigc_mm_k_from_r.F
                  sigc_mm_r.F
                  sigc_r_tau_solid.F
                  sigma_0_z_ren.F
                  sigma_int_int_fin.F
                  sigma_loc_fin.F
                  sigma_mt_int_fin.F
                  sigma_mt_mt_fin.F
                  sigma_prelim.F
                  sigma_x_final.F
                  sigma_x_int_int.F
                  sigma_x_loc.F
                  sigma_x_mt_int.F
                  sigma_x_mt_mt.F
                  sigma_x_rs.F
                  sig_omega0_g1.F
                  sig_omega0_solid.F
                  sig_omega_solid.F
                  sigx_at_rr.F
                  sigx_ii_k_from_r.F
                  sigx_im_k_from_r.F
                  sigx_im_r.F
                  sigx_im_r_rel.F
                  sigx_k_solid.F
                  sigx_mm_k_from_r.F
                  sigx_mm_r.F
                  simpson_hmg.F
                  sin_cos_integral.F
                  sin_integral.F
                  sitegen.F
                  size_shift_par.F
                  size_shift_par_load.F
                  sltrt.F
                  smultro.F
                  solid.F
                  solid_scf.F
                  s_overlap.F
                  s_overlap_m_b.F
                  s_overlap_pb_delta.F
                  spgcop.F
                  spgeql.F
                  spgprd.F
                  sphharm.F
                  spin_orbit_core.F
                  spin_orbit_rel.F
                  spline.F
                  spline_hmg.F
                  spline_inhmg.F
                  spline_ints_basic.F
                  spline_start_c.F
                  spline_start.F
                  split_magn.F
                  sp_rel.F
                  start_par_mb.F
                  start_par_solid.F
                  step_descend.F
                  sum_b0b0.F
                  sum_band_orb_char.F
                  sum_fb0.F
                  sum_ff.F
                  sumi_gw.F
                  sum_mats_p_w_loc.F
                  sum_mats_sigx_g_loc.F
                  sum_maz_p_w.F
                  sum_maz_sig_gc.F
                  sum_maz_sig_gx.F
                  sum_up_weights.F
                  sym_a_0.F
                  sym_a_1.F
                  sym_boson_rs.F
                  sym_bos_tt.F
                  sym_bos_tt_r.F
                  sym_eps_inv.F
                  sym_g_iat_jat_rr.F
                  sym_g_iat_r1_rr.F
                  symg_loc.F
                  sym_ii_rr_boson.F
                  sym_left.F
                  sym_left_tt.F
                  symlmm.F
                  sym_me.F
                  symmetrization_z.F
                  sym_mi_rr_boson.F
                  sym_mm_loc_boson.F
                  sym_mm_rr_boson.F
                  sym_mp_mt.F
                  sym_m_p_s.F
                  sym_pro.F
                  sym_pro_w.F
                  sym_pro_w_side.F
                  sym_r_r1_q_boson.F
                  symscal.F
                  sym_sig_r_from_nonsym.F
                  sym_sig_r_from_nonsym_ii.F
                  sym_sig_rs.F
                  sym_sig_rs_rel.F
                  sym_tt_int.F
                  sym_tt_mt.F
                  sym_val_left.F
                  symvec.F
                  sym_vmi_left.F
                  sym_v_mm_rs.F
                  sym_w.F
                  sym_w_ii.F
                  sym_w_im.F
                  sym_w_left.F
                  sym_w_mi.F
                  sym_w_mt.F
                  sym_w_mt_side.F
                  sym_z_0.F
                  sym_z.F
                  tau_fitting_2.F
                  tau_fitting_3.F
                  tau_fitting.F
                  tau_frequency_meshes.F
                  tau_interp_even_coef.F
                  tau_interp_odd_coef.F
                  tcgstb.F
                  tetrahedron.F
                  tos_c.F
                  tos_c_solid.F
                  tos.F
                  tos_lda.F
                  tos_x_solid.F
                  tot_rel.F
                  transf_bos_from_tau1.F
                  transf_bos_from_tau.F
                  transf_ferm_from_tau1.F
                  transf_ferm_from_tau.F
                  transf_tau_from_nu_cheb.F
                  transf_tau_from_nu_d.F
                  transf_tau_from_nu.F
                  transf_tau_from_omega_cheb.F
                  transf_tau_from_omega.F
                  trans_pb_pw.F
                  trapezoidal_integral.F
                  trig_simpson.F
                  t_t1_x.F
                  ubi_sumus.F
                  unport.F
                  upor.F
                  vandermond.F
                  var_int.F
                  var_int_right.F
                  v_bloch.F
                  vcoulat.F
                  vcoul.F
                  v_coul_full.F
                  v_coul_full_ii.F
                  v_coul_full_mi.F
                  v_coul_full_mt.F
                  v_coulomb.F
                  vexchat.F
                  vexch.F
                  vgensp.F
                  vgensph.F
                  v_im_r_from_k.F
                  v_me.F
                  v_mm_from_q.F
                  v_q_g_r1.F
                  vslli.F
                  vxint.F
                  warped.F
                  warp.F
                  wign.F
                  wign_j.F
                  w_mm.F
                  w_q_g_r1.F
                  w_red.F
                  w_red_ii.F
                  w_red_mi.F
                  write_restart_files.F
                  writero.F
                  write_wan_bni.F
                  w_rr_r_r1_star.F
                  ws_k_nu_solid_0.F
                  ws_k_nu_solid.F
                  w_tau_from_compact_form_r.F
                  x_cheb_from_something.F
                  x_limits_3_site.F
                  xorder.F
                  y_limits_3_site.F
                  zerov.F
                  z_factor_from_sigma.F
                  zheevx.F
                  zhetrd.F
                  z_limits_3_site.F
                  zone0_cart.F
                  zone1_cart.F
                  zone1_number.F
                  zx_hf.F
                  zy_hf.F)

add_executable(rspflapw ${rspflapw_SRCS})

include_directories(${MPI_INCLUDE_DIR})
target_link_libraries(rspflapw ${MPI_Fortran_LIBRARIES})

include_directories(${HDF5_INCLUDE_DIR})

target_link_libraries(rspflapw ${LAPACK_LIBRARIES} ${BLAS_LIBRARIES})

if(HDF5_FOUND)
  target_link_libraries(rspflapw ${HDF5_Fortran_LIBRARY_hdf5_fortran}
                                 ${HDF5_Fortran_LIBRARY_hdf5}
                                 ${HDF5_Fortran_LIBRARY_dl})

  set(CMAKE_Fortran_FLAGS "${CMAKE_Fortran_FLAGS} -DMPI -DUSE_HDF5")
else()
  set(CMAKE_Fortran_FLAGS "${CMAKE_Fortran_FLAGS} -DMPI")
endif()

install(TARGETS rspflapw RUNTIME DESTINATION bin)
